--- a/main.html
+++ b/main.html
@@ -5,20 +5,22 @@
  value "popup.html".
  -->
 <html>
-  <head>
+
+<head>
     <title>Getting Started Extension's Popup</title>
     <style>
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      #status {
-        /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }
+        body {
+            font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+            font-size: 100%;
+        }
+
+        #status {
+            /* avoid an excessively wide status text */
+            white-space: pre;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 400px;
+        }
     </style>
 
     <!--
@@ -27,11 +29,53 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="popup.js"></script>
-  </head>
-  <body>
-    <div id="status"></div>
-    <img id="image-result" hidden>
-  </body>
-</html>
+    <script src='node_modules/tinymce/tinymce.min.js'></script>
+    <script src='node_modules/to-markdown/dist/to-markdown.js'></script>
+    <script>
+        var basic = {
+            plugins: 'link image textpattern preview save paste'
+        }
+        var github = {
+            plugins: 'tables strikethrough'
+        }
+        var bitbucket = {
+            plugins: 'tables'
+        }
+        tinymce.init({
+            selector: '#mytextarea',
+            plugins: [basic.plugins],
+            toolbar: 'cut copy paste undo redo | styleselect | bold italic | bullist numlist | blockquote | link image',
+            style_formats: [
+                {title: "Paragraph", block: 'p'},
+                {title: "Heading 1", block: 'h1'},
+                {title: "Heading 2", block: 'h2'},
+                {title: "Heading 3", block: 'h3'},
+                {title: "Heading 4", block: 'h4'},
+                {title: "Heading 5", block: 'h5'},
+                {title: "Heading 6", block: 'h6'},
+            ],
+            menu: {
+                file: {title: "File", items: "save, preview"},
+                edit: {title: "Edit", items: "cut"}
+            },
+            setup: function(editor){
+                editor.on('change', function(e){
+                    console.log('event is: '+ e);
+                    console.log('editor is: '+ editor);
+                    console.log(toMarkdown(editor.getContent()));
+                })
+            }
+        });
+    </script>
+</head>
 
+<body>
+    <select name="provider">
+        <option value="basic">Basic</option>
+        <option value="github">Github</option>
+        <option value="bitbucket">Bitbucker</option>
+    </select>
+    <textarea id="mytextarea">Hello, World!</textarea>
+</body>
+
+</html>
